more statistic, authentication mode modified

--- a/common_services/tools/pid_migration/src/main/resources/log4j.properties
+++ b/common_services/tools/pid_migration/src/main/resources/log4j.properties
@@ -24,16 +24,16 @@
 # All rights reserved. Use is subject to license terms.
 
 # Set root category priority to ERROR and set no appender
-log4j.rootLogger=INFO, MyFileAppender, MyConsoleAppender
+log4j.rootLogger=INFO, MyFileAppender
 
 log4j.logger.test=INFO, MyFileAppender
 log4j.additivity.test=false
-log4j.logger.de.mpg.escidoc=INFO, MyFileAppender, MyConsoleAppender
+log4j.logger.de.mpg.escidoc=INFO, MyFileAppender
 log4j.additivity.de.mpg.escidoc=false
 
-log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
-log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
+#log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
+#log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.MyConsoleAppender.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%F] %m%n
 
 log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
 log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
