--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -3,15 +3,18 @@ escidoc.pidcache.service.url=http://qa-pubman.mpdl.mpg.de:8080/pidcache/handle
 escidoc.pidcache.server=qa-pubman.mpdl.mpg.de
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
+# the implementation used for the PIDProviderIf, use PIDProviderMock for testing purposes for not spending too much pids, use PIDProvider for
+# live scenario
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProvider
 # the pubman instance registering handles for
-escidoc.pubman.instance.url=http://n107.mucam.mpg.de:8080
+escidoc.pubman.instance.url=http://qa-pubman.mpdl.mpg.de:8080
 escidoc.pubman.instance.context.path=/pubman
 escidoc.pubman.item.pattern=/item/$1
 escidoc.pubman.component.pattern=/item/$1/component/$2/$3
-# triplestore database configuration - needed for item component mapping
-triplestore.datasource.url=jdbc:postgresql://qa-coreservice.mpdl.mpg.de:5432/riTriples
+# triplestore database configuration - used for item/component mapping
+triplestore.datasource.url=jdbc:postgresql://localhost:5432/riTriples
 triplestore.datasource.driverClassName=org.postgresql.Driver
 triplestore.datasource.username=postgres
 triplestore.datasource.password=postgres
+# the table name of the item / component triplestore table
 triplestore.datasource.table=t4
