--- a/common_services/dataacquisition_presentation/pom.xml
+++ b/common_services/dataacquisition_presentation/pom.xml
@@ -30,19 +30,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.68-SNAPSHOT</version>
+		<version>1.0.68</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>dataacquisition_presentation</artifactId>
 	<name>dataacquisition_presentation</name>
-	<version>1.0.64-SNAPSHOT</version>
+	<version>1.0.64</version>
 	<packaging>war</packaging>
 	
 	<scm>
-		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition_presentation</connection>
-		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/trunk/common_services/dataacquisition_presentation</developerConnection>
-		<url>https://subversion.mpdl.mpg.de/repos/common/</url>
+		<connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.68/dataacquisition_presentation</connection>
+		<developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.68/dataacquisition_presentation</developerConnection>
+		<url>https://subversion.mpdl.mpg.de/repos/common/tags/common_services-1.0.68/dataacquisition_presentation</url>
 	</scm>
 
 
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>dataacquisition</artifactId>
-			<version>1.0.64-SNAPSHOT</version>
+			<version>1.0.64</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
