--- a/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
+++ b/common_services/tools/pid_migration/src/main/resources/pidMigration.properties
@@ -1,13 +1,13 @@
 # pidcache server configuration - getting the PIDs from
-escidoc.pidcache.service.url=http://qa-pubman.mpdl.mpg.de:8080/pidcache/handle
-escidoc.pidcache.server=qa-pubman.mpdl.mpg.de
+escidoc.pidcache.service.url=http://srv03.mpdl.mpg.de:8080/pidcache/handle
+escidoc.pidcache.server=srv03.mpdl.mpg.de
 escidoc.pidcache.user.name=pid_manager
 escidoc.pidcache.user.password=wannapid
 # the implementation used for the PIDProviderIf, use PIDProviderMock for testing purposes for not spending too much pids, use PIDProvider for
 # live scenario
 escidoc.pidprovider.class=de.mpg.escidoc.handler.PIDProvider
 # the pubman instance registering handles for
-escidoc.pubman.instance.url=http://qa-pubman.mpdl.mpg.de:8080
+escidoc.pubman.instance.url=http://pubman.mpdl.mpg.de
 escidoc.pubman.instance.context.path=/pubman
 escidoc.pubman.item.pattern=/item/$1
 escidoc.pubman.component.pattern=/item/$1/component/$2/$3
