--- a/common_services/cone_presentation/pom.xml
+++ b/common_services/cone_presentation/pom.xml
@@ -38,7 +38,7 @@
 	<artifactId>cone_presentation</artifactId>
 	<packaging>war</packaging>
 	<name>cone_presentation</name>
-	<version>1.2.28-SNAPSHOT</version>
+	<version>1.2.28</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -129,4 +129,10 @@
 	<dependencyManagement>
 		<dependencies />
 	</dependencyManagement>
+
+  <scm>
+    <connection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/cone_presentation-1.2.28</connection>
+    <developerConnection>scm:svn:https://subversion.mpdl.mpg.de/repos/common/tags/cone_presentation-1.2.28</developerConnection>
+    <url>https://subversion.mpdl.mpg.de/repos/common/tags/cone_presentation-1.2.28</url>
+  </scm>
 </project>
