Changed label management
Former-commit-id: 775eedd2ffe2841b54b3563504eb0951560e5e2a

--- a/pubman/pom.xml
+++ b/pubman/pom.xml
@@ -241,6 +241,13 @@
 		</repository>
 	</repositories>
 	
+	<pluginRepositories>
+	    <pluginRepository>
+	      <id>beardedgeeks-releases</id>
+	      <url>http://beardedgeeks.googlecode.com/svn/repository/releases</url>
+	    </pluginRepository>
+ 	 </pluginRepositories>
+	
 	<distributionManagement>
 		<repository>
 			<id>releases</id>
