--- a/common_services/reporting/src/test/resources/log4j.properties
+++ b/common_services/reporting/src/test/resources/log4j.properties
@@ -25,10 +25,10 @@
 # All rights reserved. Use is subject to license terms.
 
 # Set root category priority to DEBUG and set its only appender to MyConsoleAppender
-log4j.rootLogger=ERROR
+log4j.rootLogger=INFO
 
-log4j.logger.test=INFO, MyConsoleAppender
-log4j.logger.de.mpg.escidoc=INFO, MyConsoleAppender
+log4j.logger.test=DEBUG, MyConsoleAppender
+log4j.logger.de.mpg.escidoc=DEBUG, MyConsoleAppender
 log4j.logger.org.apache.commons.digester.Digester=INFO,MyConsoleAppender
 log4j.logger.de.mpg.escidoc.services.common.emailhandling=INFO,MyConsoleAppender
 log4j.logger.net.sf.jasperreports.engine.util.JRStyledTextParser=INFO,MyConsoleAppender
