--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -6,24 +6,25 @@ FHI.query=(\
 %20and%20(\
 "/md-records/md-record/publication/type"="http://purl.org/eprint/type/Book"\
 %20or%20"/md-records/md-record/publication/type"="http://purl.org/eprint/type/BookItem"\
-%20or%20"/md-records/md-record/publication/type"="http://purl.org/escidoc/metadata/ves/publication-types/article"\
+%20or%20"/md-records/md-record/publication/type"="http://purl.org/escidoc/metadata/ves/publication\-types/article"\
 %20or%20"/md-records/md-record/publication/type"="http://purl.org/eprint/type/ConferencePaper"\
 )\
 %20and%20(\
 "/properties/public-status"=released\
 %20or%20"/properties/public-status"=submitted\
-%20or%20"/properties/public-status"=pending\
 )\
 %20and%20(\
 "/md-records/md-record/publication/dateAccepted">"0"\
-%20or%20"/md-records/md-record/publication/dateSubmitted">"0"\
+%20or%20"/md-records/md-record/publication/issued">"0"\
+%20or%20"/md-records/md-record/publication/published-online">"0"\
 )
 FHI.sort.by=%20sortby%20"/properties/created-by/id"
 FHI.report.formats=pdf,rtf
 #how many last months to be processed
 FHI.report.months.range=1
 FHI.sender.address=pubman@mpdl.mpg.de
-FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de,siedersleben@mpdl.mpg.de
+#FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de,siedersleben@mpdl.mpg.de
+FHI.recipients.addresses=siedersleben@mpdl.mpg.de
 FHI.recipients.cc.addresses=
 FHI.recipients.bcc.addresses=
 FHI.reply.to.addresses=
