--- a/common_services/pid_cache_ear/src/test/resources/pubman.properties
+++ b/common_services/pid_cache_ear/src/test/resources/pubman.properties
@@ -1,7 +1,7 @@
 # PID cache properties
-escidoc.pidcache.cache.size.max=5
+escidoc.pidcache.cache.size.max=9
 escidoc.pidcache.refresh.interval=1
-escidoc.pidcache.dummy.url=http://pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
+escidoc.pidcache.dummy.url=http://dev-pubman.mpdl.mpg.de/pubman/faces/PidNotResolved.jsp?id=
 escidoc.pid.gwdg.service.url=http://handle.gwdg.de:8080/pidservice
 escidoc.pid.gwdg.timeout=1000
 escidoc.pid.pidcache.service.url=http://localhost:8080/pidcache/handle
