ReportFHI.java contains main() now to generate FHIReport in a cron job

--- a/common_services/reporting/pom.xml
+++ b/common_services/reporting/pom.xml
@@ -58,6 +58,31 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.2.2</version>
+				<configuration>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<archive>
+						<manifest>
+							<addClasspath>true</addClasspath>
+							<mainClass>de.mpg.escidoc.services.reporting.ReportFHI</mainClass>
+						</manifest>
+					</archive>
+				</configuration>
+				<executions>
+					<execution>
+						<id>make-assembly</id> <!-- this is used for inheritance merges -->
+						<phase>package</phase> <!-- bind to the packaging phase -->
+						<goals>
+							<goal>single</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 			</plugin>
 			<plugin>
@@ -138,13 +163,13 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.14</version>
-			<scope>provided</scope>
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 		 <groupId>javax.mail</groupId>
 		 <artifactId>mail</artifactId>
 		 <version>1.4</version>
-		 <scope>provided</scope>
+		 <scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
