--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -23,8 +23,8 @@ FHI.report.formats=pdf,rtf
 #how many last months to be processed
 FHI.report.months.range=1
 FHI.sender.address=pubman@mpdl.mpg.de
-FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de,siedersleben@mpdl.mpg.de
-#FHI.recipients.addresses=siedersleben@mpdl.mpg.de
+#FHI.recipients.addresses=franke@mpdl.mpg.de,boosen@mpdl.mpg.de,jmueller@mpdl.mpg.de,siedersleben@mpdl.mpg.de
+FHI.recipients.addresses=siedersleben@mpdl.mpg.de
 FHI.recipients.cc.addresses=
 FHI.recipients.bcc.addresses=
 FHI.reply.to.addresses=
