umlaut in mail text

--- a/common_services/reporting/src/main/resources/reporting.properties
+++ b/common_services/reporting/src/main/resources/reporting.properties
@@ -31,6 +31,6 @@ FHI.reply.to.addresses=
 FHI.subject=PubMan report for FHI
 FHI.body=Liebe Frau Siebeky,\n\
 liebe Frau Quetting,\n\
-anbei erhalten Sie den aktuellen PubMan-Report f\u00FCr das FHI.\n\n\
+anbei erhalten Sie den aktuellen PubMan-Report für das FHI.\n\n\
 Viele Gr\u00FC\u00DFe\n\
 Ihr PubMan-Support-Team
