--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -1,12 +1,20 @@
 # eSciDoc-ObjId of the external Organisation
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
+
+# Framework
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
+# CoNE
+escidoc.cone.service.url=${escidoc.cone.service.url}
+
+# admin-user
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
 
 # eSciDoc-ObjId of the root of the OU tree (used for edoc import)
 escidoc.pubman.root.organisation.id=${escidoc.pubman.root.organisation.id}
-
-escidoc.cone.service.url=${escidoc.cone.service.url}
 
 <!-- Transformation implementing classes-->
 escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
