Continuum testing profile changed (escidoc.cone.service.url --> Dev-Pubman)

--- a/common_services/pom.xml
+++ b/common_services/pom.xml
@@ -872,6 +872,7 @@
 				<escidoc.cone.querier.class>de.mpg.escidoc.services.cone.MockQuerier</escidoc.cone.querier.class>
 				<escidoc.validation.source.classname>de.mpg.escidoc.services.validation.VoidValidationSchemaSource</escidoc.validation.source.classname>
 				<escidoc.pubman.instance.seal_number>ZDB-97-MPR </escidoc.pubman.instance.seal_number>
+				<escidoc.cone.service.url>http://dev-pubman.mpdl.mpg.de/cone/</escidoc.cone.service.url>
 			</properties>
 			<distributionManagement>
 				<site>
