--- a/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
+++ b/common_services/transformation/src/main/resources/transformations/otherFormats/conf/edoc.properties
@@ -1,3 +1,3 @@
 configuration=import-name=OTHER,CoNE=true
-import-name=AEI,BPC,BiblHertz,CBS,ETH,EVOLBIO,FHI,KHI,MPDL,MPDLExt,MPI MoleGen,MPIA,MPIBioChem,MPIDynamics,MPIE,MPIEVA,MPIGF,MPIIB,MPIINF,MPIIPP,MPIIS,MPIK,MPIKOFO,MPIKYB,MPIMET,MPIMF,MPIMMG,MPINEURO,MPIP,MPIPF,MPIPL,MPIPsykl,MPIS,MPIeR,MPQ,MolePhys,OTHER
+import-name=AEI,BPC,BiblHertz,CBS,ETH,EVOLBIO,FHI,KHI,MPDL,MPDLExt,MPI MoleGen,MPIA,MPIBioChem,MPIC,MPIDynamics,MPIE,MPIEM,MPIEVA,MPIGF,MPIIB,MPIINF,MPIIPP,MPIIS,MPIK,MPIKOFO,MPIKYB,MPIMET,MPIMF,MPIMMG,MPINEURO,MPIP,MPIPF,MPIPL,MPIPsykl,MPIS,MPIeR,MPQ,MolePhys,OTHER
 CoNE=true,false
