--- a/common_services/pid_cache_presentation/pom.xml
+++ b/common_services/pid_cache_presentation/pom.xml
@@ -31,7 +31,7 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.69</version>
+		<version>1.0.70-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
