Added files for MARC and BMC transformation

--- a/common_services/transformation/src/test/resources/pubman.properties
+++ b/common_services/transformation/src/test/resources/pubman.properties
@@ -30,3 +30,8 @@ escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
 escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
+escidoc.transformation.bmc2escidoc.stylesheet.filename=${escidoc.transformation.bmc2escidoc.stylesheet.filename}
+escidoc.transformation.bmc2escidoc.configuration.filename=${escidoc.transformation.bmc2escidoc.configuration.filename}
+escidoc.transformation.marcxml2escidoc.stylesheet.filename=${escidoc.transformation.marcxml2escidoc.stylesheet.filename}
+escidoc.transformation.marcxml2escidoc.configuration.filename=${escidoc.transformation.marcxml2escidoc.configuration.filename}
+escidoc.transformation.escidoc2marcxml.stylesheet.filename=${escidoc.transformation.escidoc2marcxml.stylesheet.filename}
