--- a/common_services/transformation/src/test/resources/transformation.properties
+++ b/common_services/transformation/src/test/resources/transformation.properties
@@ -17,6 +17,11 @@ escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.styl
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
 escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
+escidoc.transformation.bmc2escidoc.stylesheet.filename=${escidoc.transformation.bmc2escidoc.stylesheet.filename}
+escidoc.transformation.bmc2escidoc.configuration.filename=${escidoc.transformation.bmc2escidoc.configuration.filename}
+escidoc.transformation.marcxml2escidoc.stylesheet.filename=${escidoc.transformation.marcxml2escidoc.stylesheet.filename}
+escidoc.transformation.marcxml2escidoc.configuration.filename=${escidoc.transformation.marcxml2escidoc.configuration.filename}
+escidoc.transformation.escidoc2marcxml.stylesheet.filename=${escidoc.transformation.escidoc2marcxml.stylesheet.filename}
 
 # InDesign namespace
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
