--- a/common_services/transformation/pom.xml
+++ b/common_services/transformation/pom.xml
@@ -60,6 +60,10 @@
 					<includes>
 						<include>**/TransformationTest.java</include>
 						<include>**/EndNoteImportTest.java</include>
+						<include>**/BmcToEscidocTransformationTest.java</include>
+						<include>**/MarcXMLToEscidocTransformationTest.java</include>
+						<include>**/Marc21ToMarcXMLTransformationTest.java</include>
+						<include>**/EntityResolverTest.java</include>
 					</includes>
 				</configuration>
 			</plugin>
@@ -207,6 +211,16 @@
 		  <groupId>org.apache.tika</groupId>
 		  <artifactId>tika-core</artifactId>
 		  <version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.marc4j</groupId>
+			<artifactId>marc4j</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>xml-resolver</groupId>
+			<artifactId>xml-resolver</artifactId>
+			<version>1.2</version>
 		</dependency>
 		
 		
