Added files for MARC and BMC transformation
Former-commit-id: 81de771d0639c9a86efd77fadd3ddfa682f56fa5

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -301,6 +301,13 @@ escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename=${
 escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename}
 escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename}
 
+#By Editura
+escidoc.transformation.bmc2escidoc.stylesheet.filename=${escidoc.transformation.bmc2escidoc.stylesheet.filename}
+escidoc.transformation.bmc2escidoc.configuration.filename=${escidoc.transformation.bmc2escidoc.configuration.filename}
+escidoc.transformation.marcxml2escidoc.stylesheet.filename=${escidoc.transformation.marcxml2escidoc.stylesheet.filename}
+escidoc.transformation.marcxml2escidoc.configuration.filename=${escidoc.transformation.marcxml2escidoc.configuration.filename}
+escidoc.transformation.escidoc2marcxml.stylesheet.filename=${escidoc.transformation.escidoc2marcxml.stylesheet.filename}
+
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
 
 
