--- a/pubman/pubman_ear/pom.xml
+++ b/pubman/pubman_ear/pom.xml
@@ -375,6 +375,16 @@
 							<artifactId>avalon-framework</artifactId>
 							<includeInApplicationXml>true</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>xml-resolver</groupId>
+							<artifactId>xml-resolver</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+						<jarModule>
+							<groupId>org.marc4j</groupId>
+							<artifactId>marc4j</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
 					</modules>
 				</configuration>
 			</plugin>
@@ -817,6 +827,16 @@
 			  <groupId>org.apache.tika</groupId>
 			  <artifactId>tika-core</artifactId>
 			  <version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>xml-resolver</groupId>
+			<artifactId>xml-resolver</artifactId>
+			<version>1.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.marc4j</groupId>
+			<artifactId>marc4j</artifactId>
+			<version>2.4</version>
 		</dependency>
 	</dependencies>
 	<profiles>
