junit 4.1 -> 4.9, new profile env-release-build

--- a/common_services/dataacquisition/src/main/resources/common.properties
+++ b/common_services/dataacquisition/src/main/resources/common.properties
@@ -7,3 +7,6 @@ escidoc.dataacquisition.service.url=${escidoc.dataacquisition.service.url}
 
 #Path to the sources.xml file
 escidoc.import.sources.xml=${escidoc.import.sources.xml}
+
+#operation mode (development or release build)
+escidoc.common.release.build=${escidoc.common.release.build}
