--- a/common_services/dataacquisition/pom.xml
+++ b/common_services/dataacquisition/pom.xml
@@ -113,6 +113,16 @@
 			</testResource>
 		</testResources>
 	</build>
+	<profiles>
+		<profile>
+			<id>env-release-build</id>
+			<properties>				
+				<escidoc.common.release.build>true</escidoc.common.release.build>
+			</properties>
+			<build>
+			</build>
+		</profile>
+	</profiles>
 
 	<dependencies>
 		<dependency>
@@ -200,7 +210,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.1</version>
+			<version>4.9</version>
 		</dependency>
 		<dependency>
 			<groupId>xmlunit</groupId>
