new properties added from pubman_ear
Former-commit-id: f824f10f95eec0265a16aa62a6982ffb7aa95994

--- a/pubman/pubman_installer/src/main/resources/opensource/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/opensource/pubman.properties
@@ -55,17 +55,17 @@ escidoc.common.presentation.url=${escidoc.common.presentation.url}
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
 escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
 
-<!-- Properties for PubMan standard theme-->
+# Properties for PubMan standard theme
 escidoc.pubman.stylesheet.standard.url=${escidoc.pubman.stylesheet.standard.url}
 escidoc.pubman.stylesheet.standard.type=${escidoc.pubman.stylesheet.standard.type}
 escidoc.pubman.stylesheet.standard.apply=${escidoc.pubman.stylesheet.standard.apply}
 
-<!-- Properties for PubMan contrast theme-->
+# Properties for PubMan contrast theme
 escidoc.pubman.stylesheet.contrast.url=${escidoc.pubman.stylesheet.contrast.url}
 escidoc.pubman.stylesheet.contrast.type=${escidoc.pubman.stylesheet.contrast.type}
 escidoc.pubman.stylesheet.contrast.apply=${escidoc.pubman.stylesheet.contrast.apply}
 
-<!-- Properties for PubMan classic theme-->
+# Properties for PubMan classic theme
 escidoc.pubman.stylesheet.classic.url=${escidoc.pubman.stylesheet.classic.url}
 escidoc.pubman.stylesheet.classic.type=${escidoc.pubman.stylesheet.classic.type}
 escidoc.pubman.stylesheet.classic.apply=${escidoc.pubman.stylesheet.classic.apply}
@@ -85,17 +85,19 @@ escidoc.common.stylesheet.classic.url=${escidoc.common.stylesheet.classic.url}
 escidoc.common.stylesheet.classic.type=${escidoc.common.stylesheet.classic.type}
 escidoc.common.stylesheet.classic.apply=${escidoc.common.stylesheet.classic.apply}
 
-<!-- URL of the favicon-->
+# URL of the favicon
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 
-<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+
+# version of the pubman cookie (has to be changed if style information is changed)
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.common.framework.url}
 # URL of the escidoc-core instance you like to logon to
 escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -260,6 +262,12 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 # MAB transformation property pointing to a directory where all fulltexts are stored.
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
+# Dataaquisition - Apache FOP configuration file
+escidoc.dataaquisition.resources.fop.configuration=${escidoc.dataaquisition.resources.fop.configuration}
+
+# Transformation - instantiated BibTex-Class
+escidoc.transformation.bibtex.class=${escidoc.transformation.bibtex.class}
+
 # Transformation stylesheets
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
@@ -275,6 +283,21 @@ escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.styl
 escidoc.transformation.report.sortorder.filename=${escidoc.transformation.report.sortorder.filename}
 escidoc.transformation.marc.stylesheet.filename=${escidoc.transformation.marc.stylesheet.filename}
 escidoc.transformation.marc.configuration.filename=${escidoc.transformation.marc.configuration.filename}
+escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.pmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename=${escidoc.transformation.pmc_fulltext_xml2pmc_fulltext_xslfo.stylesheet.filename}
+escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.bmc2escidoc_publication_component.stylesheet.filename}
+escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename=${escidoc.transformation.bmc_fulltext_xml2bmc_fulltext_html.stylesheet.filename}
+escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_item.stylesheet.filename}
+escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename=${escidoc.transformation.arxiv2escidoc_publication_component.stylesheet.filename}
+
+#By Editura
+escidoc.transformation.bmc2escidoc.stylesheet.filename=${escidoc.transformation.bmc2escidoc.stylesheet.filename}
+escidoc.transformation.bmc2escidoc.configuration.filename=${escidoc.transformation.bmc2escidoc.configuration.filename}
+escidoc.transformation.marcxml2escidoc.stylesheet.filename=${escidoc.transformation.marcxml2escidoc.stylesheet.filename}
+escidoc.transformation.marcxml2escidoc.configuration.filename=${escidoc.transformation.marcxml2escidoc.configuration.filename}
+escidoc.transformation.escidoc2marcxml.stylesheet.filename=${escidoc.transformation.escidoc2marcxml.stylesheet.filename}
 
 escidoc.report.indesign.namespace=${escidoc.report.indesign.namespace}
 
@@ -285,6 +308,10 @@ escidoc.syndication.maximum.records=${escidoc.syndication.maximum.records}
 escidoc.syndication.ttl=${escidoc.syndication.ttl}
 escidoc.syndication.feeds.xml.path=${escidoc.syndication.feeds.xml.path}
 escidoc.syndication.service.url=${escidoc.syndication.service.url}
+
+#Yearbook
+escidoc.pubman.yearbook.content-model.id=${escidoc.pubman.yearbook.content-model.id}
+escidoc.pubman.yearbook.context.id=${escidoc.pubman.yearbook.context.id}
 
 #Url or path to an image that is displayed as logo on all Pubman Pages.
 escidoc.pubman.logo.url=${escidoc.pubman.logo.url}
