value for framework properties removed
Former-commit-id: 87508b8708f639b3f1cc2b0e43c5bdd4cd53674f

--- a/pubman/pubman_installer/src/main/resources/auth.properties
+++ b/pubman/pubman_installer/src/main/resources/auth.properties
@@ -56,9 +56,9 @@ escidoc.aa.client.start.class=${escidoc.aa.client.start.class}
 escidoc.aa.client.finish.class=${escidoc.aa.client.finish.class}
 
 # URL of the eSciDoc infrastructure instance (only for eSciDoc authentication)
-escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
+escidoc.framework_access.framework.url=
 # URL of the escidoc-core instance you like to logon to (only for eSciDoc authentication)
-escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+escidoc.framework_access.login.url=
 
 # identifier of the CoNE roles
 escidoc.aa.role.closed.vocabulary.id=${escidoc.framework_access.role.closed.vocabulary.id}
